Add namespaces
