# api.go
@@ -8,25 +8,36 @@ import (
 	"github.com/go-redis/redis"
 )
 
+const JobPrefix = "job:"
+
+func jobKey(jobId string, namespace string) string {
+	if namespace == "" {
+		namespace = "default"
+	}
+	return JobPrefix + namespace + ":" + jobId
+}
+
 // PutJobById godoc
 // @Summary Insert/replace job with specified id
 // @Description Overwrites job if it exists.
 // @Tags root
+// @Param namespace path string true "Namespace of job(s)"
 // @Param jobId path string true "Job ID"
 // @Param api_key query string true "API Key"
 // @Accept */*
 // @Produce json
 // @Success 200 {object} SuccessResponse
-// @Router /jobs/{jobId} [put]
+// @Router /{namespace}/jobs/{jobId} [put]
 func PutJobById(c *gin.Context) {
 	jobId := c.Param("jobId")
+	namespace := c.Param("namespace")
 	job := Job{
 		JobKey:  jobId,
 		Created: time.Now(),
 		InUse:   false,
 	}
 
-	err := rdb.Set(jobKey(jobId), job, 0).Err()
+	err := rdb.Set(jobKey(jobId, namespace), job, 0).Err()
 	if err != nil {
 		c.AbortWithStatusJSON(500, ErrorResponse{"error creating job"})
 		return
@@ -38,6 +49,7 @@ func PutJobById(c *gin.Context) {
 // @Summary Delete a job with specified id
 // @Description Deletes a job with specified id
 // @Tags root
+// @Param namespace path string true "Namespace of job(s)"
 // @Param jobId path string true "Job ID"
 // @Param api_key query string true "API Key"
 // @Accept */*
@@ -45,11 +57,11 @@ func PutJobById(c *gin.Context) {
 // @Success 200 {object} SuccessResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /jobs/{jobId} [delete]
+// @Router /{namespace}/jobs/{jobId} [delete]
 func DeleteJobById(c *gin.Context) {
 	jobId := c.Param("jobId")
-	job := Job{}
-	jsonStr, err := rdb.Get(JobPrefix + jobId).Bytes()
+	namespace := c.Param("namespace")
+	err := rdb.Get(jobKey(jobId, namespace)).Err()
 	if err != nil {
 		if err == redis.Nil {
 			c.AbortWithStatusJSON(404, ErrorResponse{"job not found"})
@@ -58,11 +70,7 @@ func DeleteJobById(c *gin.Context) {
 		c.AbortWithStatusJSON(500, ErrorResponse{"error getting job"})
 		return
 	}
-	if err = job.UnmarshalBinary(jsonStr); err != nil {
-		c.AbortWithStatusJSON(500, ErrorResponse{"error unmarshaling job"})
-		return
-	}
-	if err = rdb.Del(JobPrefix + jobId).Err(); err != nil {
+	if err = rdb.Del(jobKey(jobId, namespace)).Err(); err != nil {
 		c.AbortWithStatusJSON(500, ErrorResponse{"error deleting job"})
 		return
 	}
@@ -73,6 +81,7 @@ func DeleteJobById(c *gin.Context) {
 // @Summary Get a job with specified id
 // @Description Gets a job with specified id
 // @Tags root
+// @Param namespace path string true "Namespace of job(s)"
 // @Param jobId path string true "Job ID"
 // @Param api_key query string true "API Key"
 // @Accept */*
@@ -80,11 +89,12 @@ func DeleteJobById(c *gin.Context) {
 // @Success 200 {object} JobResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /jobs/{jobId} [get]
+// @Router /{namespace}/jobs/{jobId} [get]
 func GetJobById(c *gin.Context) {
 	jobId := c.Param("jobId")
+	namespace := c.Param("namespace")
 	job := Job{}
-	jsonStr, err := rdb.Get(JobPrefix + jobId).Bytes()
+	jsonStr, err := rdb.Get(jobKey(jobId, namespace)).Bytes()
 	if err != nil {
 		if err == redis.Nil {
 			c.AbortWithStatusJSON(404, ErrorResponse{"job not found"})
@@ -104,6 +114,7 @@ func GetJobById(c *gin.Context) {
 // @Summary Get an unused job and lock it as in-use
 // @Description Finds a job that either is not in-use or has been inactive for more than the specified time.
 // @Tags root
+// @Param namespace path string true "Namespace of job(s)"
 // @Param min_age path int false "Minimum age of job (last_used_on) in minutes before assuming it's no longer in use (optional, defaults to never)"
 // @Param api_key query string true "API Key"
 // @Accept */*
@@ -111,10 +122,11 @@ func GetJobById(c *gin.Context) {
 // @Success 200 {object} JobResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /job [get]
+// @Router /{namespace}/job [get]
 func GetUnusedJob(c *gin.Context) {
+	namespace := c.Param("namespace")
 	// Find an unused job, lock it, and return it
-	jobs, err := getAllJobs(rdb)
+	jobs, err := getAllJobs(rdb, namespace)
 	if err != nil {
 		c.AbortWithStatusJSON(500, ErrorResponse{err.Error()})
 		return
@@ -133,7 +145,7 @@ func GetUnusedJob(c *gin.Context) {
 		if !job.InUse || (minAge > 0 && now.Sub(job.LastInUse) > time.Minute*time.Duration(minAge)) {
 			job.InUse = true
 			job.LastInUse = time.Now()
-			err := rdb.Set(jobKey(job.JobKey), job, 0).Err()
+			err := rdb.Set(jobKey(job.JobKey, namespace), job, 0).Err()
 			if err != nil {
 				c.AbortWithStatusJSON(500, ErrorResponse{err.Error()})
 				return
@@ -149,15 +161,17 @@ func GetUnusedJob(c *gin.Context) {
 // @Summary Get all jobs
 // @Description Gets all jobs
 // @Tags root
+// @Param namespace path string true "Namespace of job(s)"
 // @Param api_key query string true "API Key"
 // @Accept */*
 // @Produce json
 // @Success 200 {object} JobsResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /jobs/ [get]
+// @Router /{namespace}/jobs/ [get]
 func GetAllJobs(c *gin.Context) {
-	jobs, err := getAllJobs(rdb)
+	namespace := c.Param("namespace")
+	jobs, err := getAllJobs(rdb, namespace)
 	if err != nil {
 		if _, ok := err.(*NotFoundError); ok {
 			c.AbortWithStatusJSON(404, ErrorResponse{"no jobs found"})
@@ -173,8 +187,9 @@ func GetAllJobs(c *gin.Context) {
 
 // PostJobStillInUse godoc
 // @Summary Update a job, marking it as still in use
-// @Description Used together with GET /job's min_age parameter so that inactive jobs can be reused
+// @Description Used together with GET /job's min_age parameter so that inactive jobs can be reused. Fails if the job doesn't exist
 // @Tags root
+// @Param namespace path string true "Namespace of job(s)"
 // @Param jobId path string true "Job ID"
 // @Param api_key query string true "API Key"
 // @Accept */*
@@ -182,11 +197,12 @@ func GetAllJobs(c *gin.Context) {
 // @Success 200 {object} SuccessResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /jobs/{jobId} [post]
+// @Router /{namespace}/jobs/{jobId} [post]
 func PostJobStillInUse(c *gin.Context) {
 	jobId := c.Param("jobId")
+	namespace := c.Param("namespace")
 	job := Job{}
-	jsonStr, err := rdb.Get(jobKey(jobId)).Bytes()
+	jsonStr, err := rdb.Get(jobKey(jobId, namespace)).Bytes()
 	if err != nil {
 		if err == redis.Nil {
 			c.AbortWithStatusJSON(404, ErrorResponse{"job not found"})
@@ -201,10 +217,31 @@ func PostJobStillInUse(c *gin.Context) {
 	}
 	job.InUse = true
 	job.LastInUse = time.Now()
-	err = rdb.Set(jobKey(jobId), job, 0).Err()
+	err = rdb.Set(jobKey(jobId, namespace), job, 0).Err()
 	if err != nil {
 		c.AbortWithStatusJSON(500, ErrorResponse{"error updating job"})
 		return
 	}
 	c.JSON(200, SuccessResponse{"success"})
+}
+
+func getAllJobs(rdb *redis.Client, namespace string) ([]Job, error) {
+	keys, err := rdb.Keys(JobPrefix + namespace + ":" + "*").Result()
+	if err != nil {
+		return nil, err
+	}
+	if len(keys) == 0 {
+		return nil, &NotFoundError{}
+	}
+	jobs := make([]Job, len(keys))
+	for i, key := range keys {
+		jobStr, err := rdb.Get(key).Bytes()
+		if err != nil {
+			return nil, err
+		}
+		if err = jobs[i].UnmarshalBinary(jobStr); err != nil {
+			return nil, err
+		}
+	}
+	return jobs, nil
 }
